--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Shopping Cart</title>
+    <title>Document</title>
     <link rel="stylesheet" href="libs/bootstrap.css">
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,7 +22,7 @@
       <div class="container-title">
         <span class="title"><strong>trybe</strong>shopping</span>
       </div>
-      <i class="material-icons" style="font-size:45px;color:white">shopping_cart</i>
+      <button class="material-icons" style="font-size:45px;color:white">shopping_cart</button>
       <div class="container-cartTitle">
         <span class="cart__title">Meu carrinho</span>
       </div>
@@ -45,7 +45,7 @@
       <section class="cart">
         <ol class="cart__items"></ol>
         <div class="total-price text-justify bi bi-currency-dollar">Total: 0</div>
-        <button class="empty-cart btn btn-success">Esvaziar carrinho</button>
+        <button class="empty-cart btn btn-dark">Esvaziar carrinho</button>
       </section>
     </section>
   </body>
