add count to cart

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="container-title">
         <span class="title"><strong>trybe</strong>shopping</span>
       </div>
-      <button class="material-icons" style="font-size:45px;color:white">shopping_cart</button>
+      <span class="material-icons" style="font-size:45px;color:white">shopping_cart</span>
       <div class="container-cartTitle">
         <span class="cart__title">Meu carrinho</span>
       </div>
